# LogicExpressionsSolver

./: CMakeLists.txt  InFixExpression.cpp  Makefile  Node.h  PostFixExpression.cpp  PostFixExpression.h  README.md  Stack.h  Tree.h  TreeNode.h  Utils.cpp  Utils.h  main.cpp
TP1/: InFixExpression.cpp  Node.cpp  PostFixExpression.cpp  Stack.cpp  Utils.cpp  Utils.h  errorTreatment.cpp  errorTreatment.h  main.cpp
include/: InFixExpression.h  Stack.h  TreeNode.h
src/: InFixExpression.cpp  Node.cpp  PostFixExpression.cpp  Tree.cpp  TreeNode.cpp  Utils.cpp  errorTreatment.cpp  main.cpp
